--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?allowPublicKeyRetrieval=true
-spring.datasource.username=user
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/oc_p05_yoga
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# spring.jpa.show-sql=true
 oc.app.jwtSecret=openclassrooms
 oc.app.jwtExpirationMs=86400000
