--- a/back/pom.xml
+++ b/back/pom.xml
@@ -81,10 +81,29 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.5.1.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -103,6 +122,14 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+							<excludes>
+								<exclude>com/openclassrooms/starterjwt/dto/**</exclude>
+								<exclude>com/openclassrooms/starterjwt/models/**</exclude>
+								<exclude>com/openclassrooms/starterjwt/mapper/**</exclude>
+								<exclude>com/openclassrooms/starterjwt/exception/**</exclude>
+							</excludes>
+						</configuration>
 					</execution>
 
 					<execution>
@@ -128,20 +155,15 @@
 
 				</executions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>test</id>
-			<activation>
-				<property>
-					<name>spring.profiles.active</name>
-					<value>test</value>
-				</property>
-			</activation>
-		</profile>
-	</profiles>
 
 </project>
